force-app/main/default/objects/QCC_Case_SLA__mdt/QCC_Case_SLA__mdt.object-meta.xml
<CustomObject>
    <description>SLA Table</description>
    <label>QCC Case SLA</label>
    <pluralLabel>QCC Case SLA</pluralLabel>
</CustomObject>