force-app/main/default/objects/QCC_Case_SLA__mdt/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <description>Case Type values</description>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complaint</fullName>
                <default>true</default>
                <label>Complaint</label>
            </value>
            <value>
                <fullName>Further Action Required</fullName>
            </value>
            <value>
                <fullName>Query</fullName>
            </value>
            <value>
                <fullName>Insurance Letter</fullName>
            </value>
            <value>
                <fullName>Compliment</fullName>
            </value>
            <value>
                <fullName>Damaged Baggage</fullName>
            </value>
            <value>
                <fullName>Medical-Assistance Provided</fullName>
            </value>
            <value>
                <fullName>Medical-Patient</fullName>
            </value>
            <value>
                <fullName>Delayed Baggage</fullName>
            </value>
            <value>
                <fullName>On the Spot Recovery</fullName>
            </value>
            <value>
                <fullName>Mishandled Baggage</fullName>
            </value>
            <value>
                <fullName>PNR Health Check</fullName>
            </value>
            <value>
                <fullName>Pre-Flight Watchlist Check</fullName>
            </value>
            <value>
                <fullName>Review Complimentary Upgrade - Meal</fullName>
            </value>
            <value>
                <fullName>Review Complimentary Upgrade - Special Assistance</fullName>
            </value>
            <value>
                <fullName>Review Complimentary Upgrade - Watchlist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>