force-app/main/default/objects/QCC_Case_SLA__mdt/fields/CheckWithGroup__c.field-meta.xml
<CustomField>
    <fullName>CheckWithGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QCC: If true, type value will be checked against group.</description>
    <label>Check With Group</label>
    <type>Checkbox</type>
</CustomField>