force-app/main/default/objects/QCC_Case_SLA__mdt/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <description>Customer Tier based</description>
    <label>Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bronze</fullName>
                <default>true</default>
                <label>Bronze</label>
            </value>
            <value>
                <fullName>Chairman&apos;s Lounge</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Non-tiered</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Platinum One</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Chairman&apos;s Lounge Platinum One</fullName>
            </value>
            <value>
                <fullName>Chairmans Lounge</fullName>
            </value>
            <value>
                <fullName>Chairmans Lounge Platinum One</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>